# histerm

./: .gitignore  LICENSE  MANIFEST.in  README.md  install.sh  pyproject.toml
.github/workflows/: tests.yml
shell/: histerm.bash  histerm.zsh
src/histerm/: __init__.py  __main__.py  cli.py  config.py  history.py  integration.py  tui.py
src/histerm/shell/: histerm.bash  histerm.zsh
tests/: test_config.py  test_history.py  test_integration.py  test_tui.py
